<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>vectorz</artifactId>
	<version>0.66.1-SNAPSHOT</version>

	<name>Vectorz</name>
	<description>Fast double-precision vector and matrix maths library for Java, supporting N-dimensional numeric arrays.</description>
	<parent>
		<groupId>net.mikera</groupId>
		<artifactId>mikera-pom</artifactId>
		<version>0.6.0</version>
	</parent>

	<properties>
		<gpg.keyname>340395AC</gpg.keyname>
		<gpg.useagent>true</gpg.useagent>
	</properties>

	<licenses>
		<license>
			<name>GNU Lesser General Public License (LGPL)</name>
			<url>http://www.gnu.org/licenses/lgpl.html</url>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:git@github.com:mikera/${project.artifactId}.git</connection>
		<url>scm:git:git@github.com:mikera/${project.artifactId}.git</url>
		<developerConnection>scm:git:git@github.com:mikera/${project.artifactId}.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<additionalparam>-Xdoclint:none</additionalparam>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.6</version>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>central</id>
			<name>Maven Central</name>
			<url>https://repo.maven.apache.org/maven2/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.4.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.2.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>us.bpsm</groupId>
			<artifactId>edn-java</artifactId>
			<version>0.5.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.caliper</groupId>
			<artifactId>caliper</artifactId>
			<version>0.5-rc1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.mikera</groupId>
			<artifactId>randomz</artifactId>
			<version>0.3.0</version>
		</dependency>
		<dependency>
			<groupId>net.mikera</groupId>
			<artifactId>mathz</artifactId>
			<version>0.3.0</version>
		</dependency>
	</dependencies>
</project>
